# Amend

./: .gitignore  README.md
core/npm-package/: package-lock.json  package.json  vitest.config.ts
core/npm-package/src/: index.ts
core/npm-package/src/ai/: AgentConfig.test.ts
core/npm-package/src/cli/commands/: cleanRegistry.ts  drawErrors.ts  pin.ts  registryStatus.ts
core/npm-package/src/errors/: AmendError.ts  scopeError.ts  validationError.ts
core/npm-package/src/registry/: CoreEngine.test.ts  Registry.ts  hash.ts
core/npm-package/src/tests/: logger.ts
core/pip-library/: pyproject.toml
core/pip-library/amend/: __init__.py
core/pip-library/amend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
core/pip-library/amend/ai/: __init__.py  agent_config.py
core/pip-library/amend/cli/: __init__.py  main.py
core/pip-library/amend/cli/commands/: __init__.py  clean_registry.py  draw_errors.py  log_registry.py  pin.py  registry_status.py
core/pip-library/amend/errors/: __init__.py  base.py  network_error.py  scope_error.py  validation_error.py
core/pip-library/amend/registry/: __init__.py  core_engine.py  registry.py
core/pip-library/tests/: __init__.py  test_hash_basic.py  test_hash_components.py  test_hash_determinism.py
docs/: npm-package.md  pip-library.md
sample/node-calculator/: calculator.js  package-lock.json  package.json  tester.js
sample/python-calculator/: calculator.py
