[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amend"
version = "0.1.0"
description = "Cross-language error intelligence system with deterministic 5-5-5 hash engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["error", "debugging", "hash", "ai-agent", "error-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.scripts]
amend = "amend.cli.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
include = ["amend*"]
